# mini-keccak

./: Cargo.toml  README.md
benches/: hash.rs  permutation.rs
src/: core.rs  lib.rs  matrix.rs  permutation.rs  reverse_hash.rs
