[package]
name = "minikeccak"
version = "0.1.0"
authors = ["Stanislaw Baranski <stan@stan.bar>"]
edition = "2018"

default-run = "hash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "hash"
path = "src/main.rs"

[[bin]]
name = "reverse-hash"
path = "src/reverse_hash.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
